Header, footer, button spacing fixed

--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,7 @@ body {
     padding: 0;
 }
 
+
 .nav_list {
     margin: 0 2.5em;
     margin-top: 1em;
@@ -62,13 +63,19 @@ body {
     letter-spacing: 1px;
 
     display: flex;
-    /* border: 1px solid red; */
     justify-content: space-between;
 }
 
 .nav_link {
     text-decoration: none;
     color: white;
+}
+.social-media-links{
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    margin-right: auto;
+    display: inline-flexbox;
 }
 /* NAVBAR */
 
@@ -81,14 +88,14 @@ body {
     text-align: center;
     line-height: 20px;
     cursor: pointer;
-    padding: .5em 1.5em;
     display: inline-block;
-
     width: 60px;
     height: 20px;
     background-color: black;
     border-radius: 82.5px;
     margin-bottom: 10px;
+    margin-right: 10px;
+    padding: .5em 1.5em;
 }
 
 .btn-secondary {
@@ -191,48 +198,133 @@ body {
 
 /* FOOTER */
 #footer {
-    width: 100%;
+    /* width: 100vw; */
     background: rgba(40, 38, 38, 0.50);
     backdrop-filter: blur(15px);
     -webkit-backdrop-filter: blur(15px);
-    padding: 1em 0;
-    align-items: center;
+    padding: 20px;
     display: flex;
+    align-items: center;
 }
 
-.footer-logo {
-    margin-left: 1.5em;
+.footer-logo img {
+    height: 40px;
+    width: auto;
+    margin-left: 0.5em;
 }
 
-.copyright {
-    margin-left: 1em;
+.footer-text p {
+    font-size: 14px;
     font-family: 'SamsungSansRegular';
     font-weight: normal;
-    font-size: 10px;
     color: white;
-    
+    margin-left: 0.8em;
+    margin-right: auto;
 }
 
-.facebook-logo {
-    width: 25px; 
-    height: auto;
-    margin: 0 0.5em;
+.social-media-icons {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+    margin-right: 0.5em;
+   
 }
 
-.instagram-logo {
-    width: 25px; 
-    height: auto;
-    margin-right: 1.5em;
+.social-media-icons a {
+    margin-right: 10px;
 }
+
+.social-media-icons img {
+    height: 30px;
+    width: auto;
+}
+
 /* FOOTER */
 
 /* media queries */
-/* tablet css */
-@media (min-width: 768px) {
-
-}
-
 /* desktop css */
-@media (min-width: 1080px) {
+@media (min-width: 780px) {
+    .btn-primary {
+        font-size:13px;
+        line-height: 30px;
+        padding: .5em 1.5em; 
+        display: inline-block;
+    
+        width: 90px;
+        height: 30px;
+        background-color: black;
+        border-radius: 82.5px;
+        margin-bottom: 10px;
+    }
+    
+    .btn-secondary {
+        font-size: 13px;
+        line-height: 30px;
+        width: 105px;
+        height: 30px;
+        margin-bottom: 10px;
+    }
+    /* NAVIGATION */
+    .nav_bar {
+        display: flex;
+        align-items: center;
+    }
 
+    #navbar {
+        padding: 1em 2.5em;
+    }
+
+    .logo {
+        margin-left: 1.5em;
+        margin-right: 60px;
+    } 
+
+    nav ul li a {
+        display: block;
+        padding: 10px 25px;
+    }
+
+    .nav_list {
+        font-size: 15px;
+        margin-top: 0em;
+    }
+
+    /* NAVIGATION */
+
+    /* INTRODUCTION */
+    #hero {
+        padding: 0;
+        margin: 0;
+    }
+    #introduction > div {
+        margin: 0;
+    }
+    .featured-tv>img {
+        scale: 1;
+        transform: translate(0,-5.5%);
+        margin: 0;
+        padding: 0;
+    }
+    .featured-tv {
+        margin: 0;
+        padding: 0;
+    }
+    .primary-text {
+        margin-top: 0;
+        margin-bottom: 10px;
+        font-size: 45px;
+        text-align: center;
+    }
+    
+    .secondary-text {
+        padding-top: 30px;
+        font-size: 35px;
+    }
+    /* INTRODUCTION */
+
+    /* FOOTER */
+    .footer-text p {
+        margin-left: 1.5em;
+    }
+    /* FOOTER */
 }
